<resources>
    <string name="app_name">GO SOPT Android</string>
    <string name="id_title">ID</string>
    <string name="id_hint">아이디를 입력하세요.</string>
    <string name="password_title">PASSWORD</string>
    <string name="password_hint">비밀번호를 입력하세요.</string>

<!--    login page-->
    <string name="login_welcome">Welcome to GO Android !</string>
    <string name="login_btn">LOGIN</string>
    <string name="login_success_login_msg">로그인에 성공했습니다.</string>
    <string name="login_fail_login_msg">아이디 또는 비밀번호가 일치하지 않습니다.</string>
    <string name="login_success_sign_up_msg">회원가입이 완료되었습니다!</string>

    <!--    signup page-->
    <string name="sing_up_title">SING UP</string>
    <string name="sign_up_btn">SIGN UP</string>
    <string name="sign_up_id_hint">아이디를 입력하세요.(6~10)</string>
    <string name="sign_up_password_hint">비밀번호를 입력하세요.(8~12)</string>
    <string name="sign_up_name_title">이름</string>
    <string name="sign_up_name_hint">이름을 입력하세요</string>
    <string name="sign_up_specialty_title">특기</string>
    <string name="sign_up_specialty_hint">특기를 입력하세요</string>
    <string name="sign_up_complete_btn">회원가입 완료</string>
    <string name="sign_up_id_err_msg">id는 6글자 이상 10글자 이하로 작성해주세요</string>
    <string name="sign_up_password_err_msg">password는 8글자 이상 12글자 이하로 작성해주세요</string>
    <string name="sign_up_name_err_msg">이름을 입력해주세요</string>
    <string name="sign_up_specialty_err_msg">특기를 입력해주세요</string>

    <!--    main page-->
    <string name="item_title_dog">강아지</string>

</resources>